objects/Survey__c.object
<CustomObject><fields>
        <fullName>Hide_Survey_Name__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Hide Survey Name</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Submit_Response__c</fullName>
        <description>Message to be displayed to the user when the Survey has been submitted</description>
        <inlineHelpText>Message to be displayed to the user when the Survey has been submitted</inlineHelpText>
        <label>Submit Response</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>Survey_Container_CSS__c</fullName>
        <inlineHelpText>Example: #survey_container{ margin: 0 auto; width: 600px; box-shadow: 0 0 14px #CCCCCC; -moz-box-shadow: 0 0 14px #CCCCCC; -webkit-box-shadow: 0 0 14px #CCCCCC; }</inlineHelpText>
        <label>Survey Container CSS</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>Survey_Header__c</fullName>
        <label>Survey Header</label>
        <length>32000</length>
        <type>Html</type>
    </fields><fields>
        <fullName>Thank_You_Text__c</fullName>
        <label>Thank You Text</label>
        <length>32768</length>
        <type>Html</type>
    </fields><fields>
        <fullName>URL__c</fullName>
        <defaultValue>"Undefined"</defaultValue>
        <label>URL</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields><fields>
        <fullName>thankYouLink__c</fullName>
        <label>Thank You Link</label>
        <length>200</length>
        <type>Text</type>
    </fields><fields>
        <fullName>thankYouText__c</fullName>
        <label>Thank You Text</label>
        <type>TextArea</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><enableActivities>false</enableActivities><enableBulkApi>true</enableBulkApi><enableEnhancedLookup>false</enableEnhancedLookup><enableFeeds>false</enableFeeds><enableHistory>false</enableHistory><enableReports>false</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><label>Survey</label><nameField>
        <label>Survey Name</label>
        <type>Text</type>
    </nameField><pluralLabel>Surveys</pluralLabel><sharingModel>ReadWrite</sharingModel><visibility>Public</visibility><listViews>
        <fullName>standard_view</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>standard view</label>
    </listViews></CustomObject>